Heaps fixed and added..too much to write in here..

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,6 @@
   <%= stylesheet_link_tag 'application', 'jquery-ui-1.8.11.custom' %>
   <%= javascript_include_tag 'jquery-1.5.1.min', 'jquery-ui-1.8.2.custom.min', 'jquery.effects.core.min','jquery.effects.slide.min', 'rails', 'autocomplete-rails', 'ckeditor/ckeditor', 'application' %>
   <%= csrf_meta_tag %>
-  <script type="text/javascript">
-// Used for JQuery Slide effects on Filters Divs
-//myTODO: Move to seperate JS file and remove from <HEAD> section
-
-  </script>
 </head>
 <body>
 <%= render 'layouts/header' %>
@@ -22,7 +17,6 @@
     </div>
 </div>
 <% end %>
-
 <div style="clear:both;float:none;"></div>
 <div id="container">
   <div id="yield">
@@ -39,7 +33,7 @@
 </div>
 <div id="footer">
   <p>
-    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2011 - v2.0.0.0 ALPHA - Glen Vanderhel
+    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2012 - <%= Setting::version %> - Glen Vanderhel
   </p>
 </div>
 </body>
