--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -1,15 +1,11 @@
-<% form_for [@work_order,@reply] do |f| %>
+<% simple_form_for [@work_order,@reply] do |f| %>
   <%= f.hidden_field :work_order_id %>
   <%= f.hidden_field :user_id, :value => current_user.id %>
-  <p>
-    <%= f.label :private %><%= f.check_box :private %>
-  </p>
-  <p>
-    <%= f.label :content, "Comment" %>
-    <%= f.text_area :content, :rows => '12', :cols => 72 %>
-  </p>
+    <%= f.input :content,:label => [t 'reply.message']  , :input_html => { :cols => 75, :rows => 6 } %>
+  <% if current_user.employee? %>
+    <%= f.input :private, :label => [t 'reply.internal'], :hint => [t 'reply.internal_hint'] %>
+<% end %>
     <div class="center">
-       <%= f.submit "Post Reply" %>
+       <%= f.submit "Post Reply now" %>
     </div>
-
 <% end %>
