--- a/app/views/work_orders/_on_hold_wo_tab.html.erb
+++ b/app/views/work_orders/_on_hold_wo_tab.html.erb
@@ -22,7 +22,7 @@
     <td><%= on_hold.assigned_to_username %></td>
     <td align="center"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(on_hold.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(on_hold.id)) %>&nbsp;
-        <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(on_hold.id), :confirm => 'Are you sure?', :method => :delete ) %>
+        <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(on_hold.id), :confirm => [t 'alert.destroy'], :method => :delete ) %>
     </td>
   </tr>
 <% end %>
