--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -20,7 +20,7 @@
     <td><%= page.permalink %></td>
     <td><%= truncate(page.content) %></td>
     <td><%= page.user_id %></td>
-    <td><%= page.category_id %></td>
+    <td><%= page.page_category_id %></td>
     <td><%= page.published %></td>
     <td><%= page.private %></td>
     <td><%= link_to 'Show', page %></td>
