--- a/app/views/service_invoice_lines/_form.html.erb
+++ b/app/views/service_invoice_lines/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@invoice_line) do |f| %>
+<%= simple_form_for(@service_invoice_line) do |f| %>
   <%= f.error_notification %>
 
   <div class="inputs">
