--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -5,7 +5,7 @@
       <% if current_user.client == true %>
       <li class="delete"><%= link_to (t "user.cancel_account_button"),@user, :confirm => [t 'user.msg.cancel_account'], :href => '#' %></li>
      <% end %>
-      <li class="exit"><%= link_to (t "global.exit"), :back %></li>
+      <li class="exit"><%= link_to (t "global.exit"), root_url %></li>
       <% if can? :manage, @users %>
         <li class="delete"><%= link_to (t "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %></li>
       <% end %>
