--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -35,8 +35,8 @@ acronym:hover {cursor:help;}
 #reply {outline: 1px black solid; line-height: normal !important; font-size: 12px;}
 .reply_author {font: 10px bold}
 .reply_author img { padding:3px; outline: 1px black solid}
-.reply_edited {font: 13px italic bold;color:#ff9900;text-decoration:blink; }
-.reply_edited {font: 13px italic bold;color:#ff9900;text-decoration:blink; }
+.reply_edited {font: 13px italic bold;color:#ff9900; }
+.reply_edited {font: 13px italic bold;color:#ff9900; }
 /*My Overview styling*/
 #my_overview {display: inline-block;width: 100%;overflow: hidden;text-align:center;text-transform:uppercase;font-family:impact,fantasy;font-size:14px;color:#666666; }
 #my_overview a {color: #0000FF; font-style: normal;font-size: inherit;text-decoration: none }
@@ -93,6 +93,7 @@ h6 {font-family: Consolas, Helvetica, Arial,fantasy;font-size: 12px;}
 .back {background: url(/images/back.png) 8px 5px no-repeat;}
 .print {background: url(/images/printer.png) 8px 5px no-repeat;}
 .close {background: url(/images/tick.png) 8px 5px no-repeat;}
+.add_comment {padding: 4px 30px 4px 30px;background: url(/images/comment_add.png) 8px 5px no-repeat buttonface;}
 .border {background-color:silver; -moz-box-shadow:#6495ed;border-radius:10px; padding:5px;}
 .text_shadow {text-shadow: 0 1px 2px #333;}
 #user_info_menu a {color: white;}
@@ -103,45 +104,41 @@ h6 {font-family: Consolas, Helvetica, Arial,fantasy;font-size: 12px;}
 #flash_alert {background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
 #flash_info {background: url(/images/information.png) 8px 5px no-repeat #bbd1f2;border: solid 2px #012549;}
 
-
 /*Menu */
 #menu_tabs { margin: 0 auto;}
-
 #menu{width:100%;height:30px;background-color:black;font: bold 10px Verdana;padding: 0;}
-    #menu ul{margin: 0;padding: 0;list-style-type: none;}
-    #menu li{float: left;position: relative;display: inline-block;z-index: 2;}
-    #menu ul li a{display: inline-block;background:black;color: white; padding: 8px 10px;text-decoration:none;border-bottom:2px solid black;}
-    #menu ul li ul li a{width:160px;}/*width of sub menus*/
-    #menu ul li:hover ul {visibility: visible;border-radius:10px;}
-    #menu ul ul {position: absolute; visibility: hidden }
-    #menu ul li a.selected {background:#333333;border-bottom:2px solid red}
-    #menu li a.selected:hover{color:white;}
-    #menu ul li:hover ul li a:hover {background:#333333;}
-    #menu li a:hover {color:white;background-color:#333333;}
-    #menu ul:hover {background:#fff;}
+#menu ul{margin: 0;padding: 0;list-style-type: none;}
+#menu li{float: left;position: relative;display: inline-block;z-index: 2;}
+#menu ul li a{display: inline-block;background:black;color: white; padding: 8px 10px;text-decoration:none;border-bottom:2px solid black;}
+#menu ul li ul li a{width:160px;}/*width of sub menus*/
+#menu ul li:hover ul {visibility: visible;border-radius:10px;}
+#menu ul ul {position: absolute; visibility: hidden }
+#menu ul li a.selected {background:#333333;border-bottom:2px solid red}
+#menu li a.selected:hover{color:white;}
+#menu ul li:hover ul li a:hover {background:#333333;}
+#menu li a:hover {color:white;background-color:#333333;}
+#menu ul:hover {background:#fff;}
 
-
-/*SimpleForm Styles*/
+/*SimpleForm CSS*/
 input.title {font-size:1.5em;}
 .simple_form {margin-bottom:0;}
-    .simple_form div.input, div.textarea, div.textile {font-size:100%; margin-bottom: 5px;width:100%;clear:left; display:inline-block;}
-    .simple_form label {float:left;text-align:right; margin: 0 10px 0 10px;display:block;width:auto;min-width:25%;vertical-align:top;}
-    .simple_form input[type='submit'] {text-transform:capitalize;display:inline;}
-    .simple_form div.boolean {text-transform:none;}
-    .simple_form button {position:relative;}
-    .simple_form label.collection_radio {margin-right: 10px;vertical-align:-2px; margin-left:2px; display:table-row;text-align:left;float:none;width:0;}
-    .error_notification {padding: 4px 30px 4px 30px;background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
-    .simple_form .error {clear:left;color: #ff3333;display:block;margin-left:33%;font-size:10px;padding-left:20px;font-style:italic;font-weight:bold;text-transform:capitalize;}
-    .simple_form .hint {font-size:0.8em;clear: left;margin-left: 27%;padding-left:20px;color: #555;display: block;font-style: italic;}
-    input.radio { vertical-align: -3px; }
-    input.check_boxes { margin-left: 3px; vertical-align: -3px;}
-    label.collection_check_boxes { margin:2px 0; vertical-align: -2px;}
-    input.required, input.optional, textarea.optional, textarea.required, {display:block;}
-    input.required, textarea.required, .select_required {border: 2px solid #8b0000; background-color:#ffffcc;font-size:inherit;}
-    input.select.required {border: 2px solid #8b0000; background-color:#ffffcc;font-size:inherit;}
-    .select_required {padding:0.4em;}
-
-
+.simple_form div.input, div.textarea, div.textile {font-size:100%; margin-bottom: 5px;width:100%;clear:left; display:inline-block;}
+.simple_form label {float:left;text-align:right; margin: 0 10px 0 10px;display:block;width:auto;min-width:25%;vertical-align:top;}
+.simple_form input[type='submit'] {text-transform:capitalize;display:inline;}
+.simple_form div.boolean {text-transform:none;}
+.simple_form button {position:relative;}
+.simple_form label.collection_radio {margin-right: 10px;vertical-align:-2px; margin-left:2px; display:table-row;text-align:left;float:none;width:0;}
+.error_notification {padding: 4px 30px 4px 30px;background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
+.simple_form .error, .hint {clear:left;display:block;margin-left:27%;padding-left:20px;font-style:italic;}
+.simple_form .error {color: #ff3333;font-size:0.9em;font-weight:bold;text-transform:capitalize;}
+.simple_form .hint {font-size:0.8em;color: #555;}
+input.radio { vertical-align: -3px;}
+input.check_boxes { margin-left: 3px; vertical-align: -3px;}
+label.collection_check_boxes { margin:2px 0; vertical-align: -2px;}
+input.required, input.optional, textarea.optional, textarea.required, {display:block;}
+input.required, textarea.required, .select_required {border: 2px solid #8b0000; background-color:#ffffcc;font-size:inherit;}
+input.select.required {border: 2px solid #8b0000; background-color:#ffffcc;font-size:inherit;}
+.select_required {padding:0.4em;}
 /*Form Tab CSS Styling*/
 .tabcontainer {background-color:#fffefe;border-radius:0 0 10px 10px;border:none}
 .tabcontent {display: none;overflow:hidden;padding:10px 10px 10px 10px;}
@@ -168,7 +165,7 @@ input.title {font-size:1.5em;}
 
 
 
-/*Table Formatting*/
+/*Normal Table CSS*/
 #index_table {border-collapse:collapse;}
 #index_table td {border: 1px solid #000066;padding:3px 7px 2px 7px;}
 #index_table th {color: #ffffff;background-color: #4B7399;border: 1px solid #000066;padding:3px 7px 2px 7px;}
@@ -189,12 +186,22 @@ input.title {font-size:1.5em;}
 .priority_main_4 td {background-color: #ff9999; font-weight:bold;}
 .priority_main_5 td {background-color: #cc0033; font-weight:bolder;}
 
+/*Invoice Line Items Table CSS*/
+#invoice_line_items {border-collapse:collapse;line-height: normal;}
+#invoice_line_items td {border: 1px solid #000066;padding:3px 7px 2px 7px;}
+#invoice_line_items th {color: #ffffff;background-color: #4B7399;border: 1px solid #000066;padding:3px 7px 2px 7px;}
+#invoice_line_items td {color: #000000;}
+#invoice_line_items th a {color:#ccccff;}
+#invoice_line_items th a {color:#ccccff;}
+#invoice_line_items th .current {padding-right:14px;background: right center no-repeat;}
+.clean input {border: none;background: none;}
+
 
 /*Display Nice Table Labels and Fields and Field sets Headers*/
 #show_layout {line-height:2.5em; }
 #show_layout label {float:left;text-align:right; margin: 0 10px 0 10px;display:block;width:auto;min-width:25%;font-weight:bold;}
 #show_layout div.field {font-size:100%;display:block;margin-left:27%;width:60%}
-#show_layout .html_area {line-height:1.5em;display:block;margin-left:27%;width:55%;background-color:#e3dede;padding:0 15px 15px 15px;}
+#show_layout .html_area {line-height:normal;display:block;margin-left:27%;width:55%;background-color:#dfdede;padding:0 10px 10px 10px;outline: 1px solid #666666}
 #show_layout div.fieldsets {font-size:80%;display:inline-block;margin-left:27%;}
 .tbl_labels { width:25%; text-align:right; vertical-align:top;}
 .tbl_fields { text-align:left; vertical-align:top; text-decoration:underline; width:50%;}
@@ -233,7 +240,7 @@ legend, #IE8#HACK {margin-top:0;margin-bottom:0;}
 
 /*JQUERY  Show/Hide Div Toggling Custom Styling*/
 .toggler {position: relative; padding: .4em 0 .5em 0 }
-	#button { padding: .5em 1em; text-decoration: none; }
+	#button { text-decoration: none; }
 	#effect { width: 100%;  padding: 0.4em; position: relative; }
 	#effect h3 { margin: 0; padding: 0.4em; text-align: center; }
 
